[package]
name = "mink"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
pic8259 = "0.11.0"
spin = "0.10.0"
x86_64 = { version = "0.15.2", features = ["abi_x86_interrupt"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
crate-type = ["staticlib"]
